does this fix horizontal scroll?

--- a/parlassets/scss/_card.scss
+++ b/parlassets/scss/_card.scss
@@ -14,6 +14,7 @@
 
     ::-webkit-scrollbar {
       width: 4px;
+      height: 4px;
     }
 
     ::-webkit-scrollbar-track {
